<resources>
    <string name="app_name">dosnap</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">设置</string>
    <string name="slogan">用好照片  交新朋友</string>
    <string name="waiting">正在从服务器获取数据，请稍候……</string>
    <string name="share_error">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="user">用户名</string>
    <string name="userlabel">用户</string>
    <string name="label">#标签</string>
    <string name="xitekuser">色影无忌用户名</string>
    <string name="searchlabel">搜索标签</string>
    <string name="searchlocal">搜索地点</string>
    <string name="searchuser">搜索用户</string>
    <string name="hisactivity">查看往期活动</string>
    <string name="history">往期活动</string>
    <string name="userused">用户名已被注册，请注册其它用户名</string>
    <string name="pass">密码</string>
    <string name="login">登录</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="quan">朋友圈</string>
    <string name="loginweibo">微博</string>
    <string name="loginwechat">微信</string>
    <string name="nowechat">未检测到微信，无法使用微信登录</string>
    <string name="wechatcancel">微信未登录或微信授权失败</string>
    <string name="logout">退出帐号</string>
    <string name="reg">注册</string>
    <string name="mailreg">邮箱注册</string>
    <string name="regsuccess">注册成功，请用新注册的用户名、密码登录</string>
    <string name="regerror">注册项目有错误，请检查红色提示</string>
    <string name="back">返回</string>
    <string name="email">注册邮箱</string>
    <string name="newpass">输入新密码</string>
    <string name="newpass2">再次输入新密码</string>
    <string name="emailerror">不是合法的邮箱</string>
    <string name="emailused">邮箱已被使用，请用其他邮箱注册</string>
    <string name="inputuser">输入用户名</string>
    <string name="inputaccount">请输入帐号</string>
    <string name="inputemail">输入注册邮箱</string>
    <string name="inputpass">请输入密码</string>
    <string name="inputpass2">再次输入密码</string>
    <string name="photo">照片</string>
    <string name="follow">粉丝</string>
    <string name="laud">关注</string>
    <string name="golaud"><b>+</b>关注</string>
    <string name="haslaud">√已关注</string>
    <string name="good">赞</string>
    <string name="goodphotos">赞过的照片</string>
    <string name="cache">清理缓存</string>
    <string name="cachenum">0M</string>
    <string name="feedback">意见反馈</string>
    <string name="protocol">用户协议</string>
    <string name="protocollink">Dosnap用户协议</string>
    <string name="protocolagree">点击注册表示同意</string>
    <string name="about">关于</string>
    <string name="album">相册</string>
    <string name="camera">相机</string>
    <string name="ok">确定</string>
    <string name="waitingforwechat">请稍候，等待微信响应</string>
    <string name="waitingforweibo">请稍候，等待微博响应</string>
    <string name="love">喜欢</string>
    <string name="cancel">取消</string>
    <string name="chattip">下拉加载更早消息</string>
    <string name="search">搜索</string>
    <string name="nosearch">没有匹配搜索关键词的结果</string>
    <string name="nomessage">没有相关通知</string>
    <string name="nohistory">当前没有活动</string>
    <string name="editor">编辑推荐</string>
    <string name="usererror">意外错误，用户%s可能不存在</string>
    <string name="error">意外错误，可能存在内存不足</string>
    <string name="commentno">这张照片还无人评论，快来鼓励一下作者吧</string>
    <string name="comment">评论</string>
    <string name="commentzero">评论内容不能为空</string>
    <string name="addcomment">添加评论</string>
    <string name="addchat">输入内容</string>
    <string name="send">发送</string>
    <string name="comment2user">回复： %1$s</string>
    <string name="apphead">回复  %1$s ：</string>
    <string name="labelnum">%1$s 张照片</string>
    <string name="interest">感兴趣  %1$s人</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开开始刷新</string>
    <string name="header_hint_refresh_loading">刷新中……</string>
    <string name="header_hint_refresh_time">更新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开开始加载</string>
    <string name="join">已参加  %1$s人</string>
    <string name="justdoit">立即参加</string>
    <string name="hotest">最热</string>
    <string name="newest">最新</string>
    <string name="daytop">日佳</string>
    <string name="weektop">周佳</string>
    <string name="imgtip">图片</string>
    <string name="interest2">感兴趣</string>
    <string name="join3">参加</string>
    <string name="join2">已参加</string>
    <string name="activity">发现</string>
    <string name="deled">该照片可能已被删除</string>
    <string name="goodphoto">赞过的照片</string>
    <string name="shareh5">分享活动</string>
    <string name="activityinfo">活动详情</string>
    <string name="activityname">活动名称：%1$s</string>
    <string name="activityshare">%1$s\n时间：%2$s\n地点：%3$s</string>
    <string name="activityshare2">%1$s\n>>http://app.dosnap.com/api/Share/sharematch?matchid=%2$s</string>
    <string name="activityshare3">Dosnap活动预告：%1$s\n>>http://app.dosnap.com/api/Share/sharematch?matchid=%2$s</string>
    <string name="activityshare4">%1$s\n>>http://app.dosnap.com/api/Share/sharetopic?id=%2$s</string>
    <string name="activityshareh5">%1$s\n>>%2$s</string>
    <string name="dateformat">yyyy年MM月dd日</string>
    <string name="dateformat2">yyyy年MM月dd日 HH:mm</string>
    <string name="dateformat3">yyyy.MM.dd</string>
    <string name="sharemsg">简直是约拍利器啊！ %1$s 在dosnap发了一张大片，快来看看>>http://app.dosnap.com/api/Share/shareimg?arcid=%2$s</string>
    <string name="sharemsg2">我在dosnap分享了一张  %1$s 的作品。摄影，手机就够了！ 下载地址>>http://app.dosnap.com/api/Share/shareimg?arcid=%2$s</string>
    <string name="errortype">未知的活动类型，可能需要更新应用才能参与</string>
    <string name="sharetitle">分享至</string>
    <string name="baiduapi_error">百度地图接口返回错误</string>
    <string name="share2weibo">同步到微博</string>
    <string name="call">提醒谁看</string>
    <string name="yourself">你自己</string>
    <string name="nolaud">还没有人赞过此图片</string>
    <string name="nofollow">没有关注</string>
    <string name="nofans">没有粉丝</string>
    <string name="nosinafans">没有找到互粉的新浪好友</string>
    <string name="nocall">没有粉丝或搜索无结果</string>
    <string name="home">Ta的主页</string>
    <string name="myhome">个人主页</string>
    <string name="msgto">私信</string>
    <string name="activityon">正在进行</string>
    <string name="nomore">没有更多内容……</string>
    <string name="nothing">没有内容</string>
    <string name="message">消息</string>
    <string name="logouttitle">确定退出当前用户</string>
    <string name="cachetitle">确定清理缓存</string>
    <string name="followformat">&lt;font color=black&gt;%1$s&lt;/font&gt; 关注了&lt;font color=black&gt;你&lt;/font&gt;</string>
    <string name="followformat2">&lt;font color=black&gt;%1$s&lt;/font&gt; 关注了 &lt;font color=black&gt;%2$s&lt;/font&gt; </string>
    <string name="laudformat">&lt;font color=black&gt;%1$s&lt;/font&gt; 赞了&lt;font color=black&gt;你&lt;/font&gt;的照片</string>
    <string name="laudformat2">&lt;font color=black&gt;%1$s&lt;/font&gt; 赞了 &lt;font color=black&gt;%2$s&lt;/font&gt; 的照片</string>
    <string name="commentformat">&lt;font color=black&gt;%1$s&lt;/font&gt; 评论了你的照片</string>
    <string name="commentformat2">&lt;font color=black&gt;%1$s&lt;/font&gt; 评论了 &lt;font color=black&gt;%2$s&lt;/font&gt; 的照片</string>
    <string name="atformat">&lt;font color=black&gt;%1$s&lt;/font&gt; @了&lt;font color=black&gt;你&lt;/font&gt;</string>
    <string name="replyformat">&lt;font color=black&gt;%1$s&lt;/font&gt; %2$s</string>
    <string name="addfriend">添加好友</string>
    <string name="weibofriend">微博好友</string>
    <string name="lauduser">赞过的用户</string>
    <string name="laudtip">给作者点个赞，鼓励一下ta吧</string>
    <string name="invite">邀请</string>
    <string name="invitejson">%1$s ,手机也能拍大片! DoSnap里搜 %2$s，加我！下载地址&amp;gt;&amp;gt;http://www.dosnap.com</string>
    <string name="invited">已邀请</string>
    <string name="wechatfriend">微信好友</string>
    <string name="qqfriend">QQ好友</string>
    <string name="friendmsg">手机也能拍大片！\ndosnap里搜 %1$s，加我！下载地址>>http://www.dosnap.com</string>
    <string name="shareapptext">Dosnap - 中文图片社交第一平台,不只是手机摄影</string>
    <string name="shareapptext2">摄影，手机就够了</string>
    <string name="friendicon">http://www.xitek.com/3G/dosnap.png</string>
    <string name="friendurl">http://1au0.l.mob.com/QCW9X</string>
    <string name="croplimit">选取的图片部分宽度不满足最低要求，不能发布……</string>
    <string name="effect">照片特效</string>
    <string name="locerror">无法获取有效的位置信息，定位失败！</string>
    <string name="address">添加地点</string>
    <string name="version">版本号 %1$s </string>
    <string name="morecom">查看全部  %1$s 条评论</string>
    <string name="suggest">意见反馈</string>
    <string name="submit">提交</string>
    <string name="suggesthit">请输入您的建议与意见，感谢您的支持</string>
    <string name="suggestsuc">提交成功，感谢您的支持</string>
    <string name="suggestzero">内容不能少于6个字</string>
    <string name="edit">编辑资料</string>
    <string name="usertext">用户简介</string>
    <string name="avatar">头像选取</string>
    <string name="save">保存</string>
    <string name="sinaok">微博帐号绑定成功</string>
    <string name="sinapok">成功同步到新浪微博</string>
    <string name="wechatok">微信帐号绑定成功</string>
    <string name="vertitle">&lt;p&gt;&lt;big&gt;&lt;b&gt;&lt;font color=red&gt;发现新版本:%1$s&lt;/font&gt;&lt;/b&gt;&lt;/big&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=https://play.google.com/store/apps/details?id=com.xitek.dosnap&gt;谷歌商店下载&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;%2$s&quot;&gt;官网直接下载&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;b&gt;新版本更新内容如下：&lt;/b&gt;&lt;/p&gt;</string>
    <string name="you">你</string>
    <string name="addition">动态</string>
    <string name="logintip">已有帐号，立即</string>
    <string name="forget">忘记密码</string>
    <string name="passtooshort">密码太短</string>
    <string name="passtoolong">密码太长</string>
    <string name="passtoosim">密码不能是纯数字</string>
    <string name="passnotsame">两次输入的密码不一致</string>
    <string name="userblank">用户名不能包含空格</string>
    <string name="usernull">用户名不能为空</string>
    <string name="addavatar">添加头像</string>
    <string name="nickname">昵称</string>
    <string name="nicktip">请输入您的昵称</string>
    <string name="usertext2">个人简介：</string>
    <string name="joinin">进入</string>
    <string name="avatarnotok">请设置头像</string>
    <string name="expand">查看全部</string>
    <string name="winning">获奖作品</string>
    <string name="unexpand">收起</string>
    <string name="setpassok">密码确认邮件已经发送，请点标题为“Dosnap密码激活确认”的邮件中的“激活新密码”链接生效新密码</string>
    <string name="title">Cropper</string>
    <string name="fixedAspectRatio">fixedAspectRatio =</string>
    <string name="aspectRatioX">\u002010</string>
    <string name="aspectRatioXHeader">aspectRatioX =</string>
    <string name="aspectRatioY">\u002010</string>
    <string name="aspectRatioYHeader">aspectRatioY =</string>
    <string name="showGuidelines">showGuidelines = </string>
    <string name="crop">裁切</string>
    <string name="rotate">旋转</string>
    <string name="nocrop">忽略裁切</string>
    <string name="next">下一步</string>
    <string name="filter">效果</string>
    <string name="addlocation">添加地点</string>
    <string name="location">所在位置</string>
    <string name="share">分享</string>
    <string name="share2">发布</string>
    <string name="sharepopup">分享照片</string>
    <string name="sharetip">添加照片描述</string>
    <string name="del">删除</string>
    <string name="exif_make">品牌</string>
    <string name="exif_model">型号</string>
    <string name="exif_software">软件</string>
    <string name="exif_exposuretime">曝光时间</string>
    <string name="exif_shutterspeed">快门速度</string>
    <string name="exif_lensmodel">镜头</string>
    <string name="exif_exposurebiasvalue">曝光补偿</string>
    <string name="exif_flash">闪光灯</string>
    <string name="exif_focallength">焦距</string>
    <string name="exif_aperture">光圈</string>
    <string name="exif_isospeedratings">ISO</string>
    <string name="blacklist">黑名单</string>
    <string name="weichat">微信</string>
    <string name="weibo">微博</string>
    <string name="all">全部</string>
    <string name="recommand_user">推荐用户</string>
    <string name="editor_recommand">编辑推荐</string>
    <string name="relevant_tag">相关标签：</string>
    <string name="theme">主题</string>
    <string name="shareto">分享到</string>
    <string name="toreport">举报</string>
</resources>